[gd_scene load_steps=9 format=3 uid="uid://dp8fhgwbm3qdq"]

[ext_resource type="Script" path="res://scripts/Scene-Change Scripts/credits_buttons.gd" id="1_ffs3y"]
[ext_resource type="FontFile" uid="uid://cp5n4a86iqssk" path="res://art/PixeloidSans.ttf" id="1_rbp8d"]
[ext_resource type="Texture2D" uid="uid://dyb1w84lj1mcq" path="res://art/temp_dirt_background.jpg" id="2_6y115"]
[ext_resource type="Texture2D" uid="uid://wvetycemseon" path="res://art/Headshots/Miles.jpg" id="3_sp4k2"]
[ext_resource type="Texture2D" uid="uid://udyhy3tgl5ei" path="res://art/Headshots/Gabriel.jpg" id="4_tvnex"]
[ext_resource type="Texture2D" uid="uid://ctb5olyw4nsms" path="res://art/Headshots/Andrew.jpeg" id="5_b8f00"]
[ext_resource type="Texture2D" uid="uid://bi4ynf00i72ey" path="res://art/Headshots/Luke.jpg" id="6_6henh"]
[ext_resource type="Texture2D" uid="uid://brk3126jbsmdq" path="res://art/Headshots/Kyle.png" id="7_723cl"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffs3y")

[node name="background image" type="Sprite2D" parent="."]
position = Vector2(574, 316)
scale = Vector2(0.623535, 0.623535)
texture = ExtResource("2_6y115")

[node name="background darken" type="Panel" parent="."]
offset_left = -72.0
offset_top = -87.0
offset_right = 1239.0
offset_bottom = 720.0

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 51.0
offset_right = 211.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("1_rbp8d")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Miles" type="Button" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 230.0
offset_right = 501.0
offset_bottom = 296.0
theme_override_fonts/font = ExtResource("1_rbp8d")
theme_override_font_sizes/font_size = 30
text = "Miles"

[node name="Sprite2D" type="Sprite2D" parent="Miles"]
position = Vector2(179, -112)
scale = Vector2(0.109896, 0.109896)
texture = ExtResource("3_sp4k2")

[node name="Gabriel" type="Button" parent="."]
layout_mode = 0
offset_left = 705.0
offset_top = 230.0
offset_right = 866.0
offset_bottom = 296.0
theme_override_fonts/font = ExtResource("1_rbp8d")
theme_override_font_sizes/font_size = 30
text = "Gabriel"

[node name="Sprite2D" type="Sprite2D" parent="Gabriel"]
position = Vector2(172, -111)
scale = Vector2(0.612179, 0.612179)
texture = ExtResource("4_tvnex")

[node name="Andrew" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 520.0
offset_right = 241.0
offset_bottom = 586.0
theme_override_fonts/font = ExtResource("1_rbp8d")
theme_override_font_sizes/font_size = 30
text = "Andrew"

[node name="Sprite2D" type="Sprite2D" parent="Andrew"]
position = Vector2(172, -111)
scale = Vector2(0.332609, 0.332609)
texture = ExtResource("5_b8f00")

[node name="Luke" type="Button" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 520.0
offset_right = 606.0
offset_bottom = 586.0
theme_override_fonts/font = ExtResource("1_rbp8d")
theme_override_font_sizes/font_size = 30
text = "Luke"

[node name="Sprite2D" type="Sprite2D" parent="Luke"]
position = Vector2(187, -108)
scale = Vector2(0.313614, 0.313614)
texture = ExtResource("6_6henh")

[node name="Kyle" type="Button" parent="."]
layout_mode = 0
offset_left = 810.0
offset_top = 520.0
offset_right = 971.0
offset_bottom = 586.0
theme_override_fonts/font = ExtResource("1_rbp8d")
theme_override_font_sizes/font_size = 30
text = "Kyle"

[node name="Sprite2D" type="Sprite2D" parent="Kyle"]
position = Vector2(186, -107)
scale = Vector2(0.401674, 0.401674)
texture = ExtResource("7_723cl")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Miles" to="." method="_on_miles_pressed"]
[connection signal="pressed" from="Gabriel" to="." method="_on_gabriel_pressed"]
[connection signal="pressed" from="Andrew" to="." method="_on_andrew_pressed"]
[connection signal="pressed" from="Luke" to="." method="_on_luke_pressed"]
[connection signal="pressed" from="Kyle" to="." method="_on_kyle_pressed"]
